Initialiser graphisme tableau

--- a/Affichage.html
+++ b/Affichage.html
@@ -213,7 +213,14 @@
       <thead>
         <tr id="tableHeader">
           <th>ID</th>
+          <th>Emetteur</th>
+          <th>Reference</th>
+          <th>Indice</th>
+          <th>Recu</th>
+          <th>DescriptionObservations</th>
+          <th>DateLimite</th>
           <th>Bloquant</th>
+          <th>Archive</th>
         </tr>
       </thead>
       <tbody id="tableBody"></tbody>
