--- a/Affichage.html
+++ b/Affichage.html
@@ -47,7 +47,7 @@
       width: 100%;
       max-width: 800px;
       border-collapse: collapse;
-      margin-top: 20px;
+      margin-top: 0px;
       background-color: #fff;
     }
 
@@ -68,12 +68,21 @@
     }
 
     .table-container {
-      margin-top: 20px;
-      padding: 20px;
+      margin-top: 0px;
+      padding: 0px;
+      overflow-y: auto;
+      max-height: calc(100vh - 200px);
+    }
+
+    #dataTable thead {
+      position: sticky;
+      top: 0;
+      background-color: #333;
+      z-index: 1;
     }
 
     .add-form {
-      margin-top: 20px;
+      margin-top: 10px;
       padding: 10px;
       background-color: #f4f4f4;
       color: black;
