--- a/Affichage.html
+++ b/Affichage.html
@@ -480,13 +480,13 @@
       </script>
       
       <label for="indice">Indice:</label>
-      <input type="text" id="indice" name="indice" required>
+      <input type="text" id="indice" name="indice" required placeholder="Entrez un indice(Exemple : 0)">
 
       <label for="recu">Recu:</label>
       <input type="date" id="recu" name="recu" required>
 
       <label for="description">Description:</label>
-      <textarea id="description" name="description" required></textarea>
+      <textarea id="description" name="description" required placeholder="Entrez une description(Exemple : EN ATTENTE)"></textarea>
 
       <label for="datelimite">Date Limite:</label>
       <input type="date" id="datelimite" name="datelimite" required>
@@ -660,13 +660,13 @@
       </div>
       
       <label for="editIndice">Indice:</label>
-      <input type="text" id="editIndice" name="indice" required>
+      <input type="text" id="editIndice" name="indice" required placeholder="Entrez un indice (Exemple : 0)">      >
 
       <label for="editRecu">Recu:</label>
       <input type="date" id="editRecu" name="recu" required>
 
       <label for="editDescription">Description:</label>
-      <textarea id="editDescription" name="description" required></textarea>
+      <textarea id="editDescription" name="description" required placeholder="Entrez une description (Exemple : EN ATTENTE)"></textarea>
 
       <label for="editDatelimite">Date Limite:</label>
       <input type="date" id="editDatelimite" name="datelimite" required>
