--- a/Affichage.html
+++ b/Affichage.html
@@ -1672,7 +1672,7 @@
     
       // Afficher la liste des options sans inclure le document sélectionné
       container.innerHTML = `
-        <p>Etage :</p>
+        <p>Document :</p>
         <div id="documentList" style="max-height: 200px; overflow-y: auto; border: 1px solid #ddd; padding: 10px;">
           ${listHTML}
         </div>
